# PBWA

./: .env.example  .gitignore  README.md  pyproject.toml
backend/: agents.py  config.py  main.py  prompts.py  pyproject.toml  schemas.py  timeseries_db.py  tools.py  vector_store.py  wallet.py
backend/tools/: __init__.py  coingecko.py  defi_llama.py  document_parser.py  onchain.py  timeseries_retriever.py  twitter.py  vfat_scraper.py  web_scraper.py
frontend/: package.json  pnpm-lock.yaml
frontend/src/app/: page.tsx
frontend/src/components/: ChatStream.tsx  FeedbackPrompt.tsx  QueryForm.tsx  StreamDisplay.tsx
frontend/src/hooks/: useResearchAgent.ts
